--- a/package.json
+++ b/package.json
@@ -1,20 +1,48 @@
 {
-	"name": "vuex-convert",
-	"version": "1.0.3",
-	"author": "Pszz",
-	"license": "ISC",
-	"description": "Simplify vuex configuration",
-	"main": "main.min.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com/Pszz/Vuex-Convert.git"
-	},
-	"keywords": ["Vuex", "Vue"],
-	"bugs": {
-		"url": "https://github.com/Pszz/Vuex-Convert/issues"
-	},
-	"homepage": "https://github.com/Pszz/Vuex-Convert#readme"
+  "name": "vuex-conf",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "vue": "^2.6.6",
+    "vuex": "^3.1.0",
+    "vuex-convert": "^1.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-eslint": "^3.4.1",
+    "@vue/cli-service": "^3.4.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
